JavaFX transition dep